Q&A Section Is Done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <strong>JavaScript is a scripting language.</strong>
-                            JavaScript is a scripting and synchronous single threaded language. its work on client site
+                            JavaScript is a scripting and synchronous single threaded language. Its work on client site
                             by javascript engine with different browser by different engine as like v8 using for chorom.
                             2 type of connection usese for run javascripit code on clint site is network and cache.
                         </div>
@@ -92,7 +92,7 @@
                         <div class="accordion-body">
                             <strong>JavaScript is a synchronous single threaded language.</strong> And event loop is
                             responsible for executing code, collecting and processing event and executing queued
-                            sub-tasks. it work call stack and event queue with event table
+                            sub-tasks. It work call stack and event queue with event table
                         </div>
                     </div>
                 </div>
@@ -100,22 +100,19 @@
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
+                            Difference Between Localstorage And Sessionstorage
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes
-                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
-                            can
-                            modify any of this with custom CSS or overriding our default variables. It's also worth
-                            noting
-                            that just about any HTML can go within the <code>.accordion-body</code>, though the
-                            transition
-                            does limit overflow.
+                            <strong>Storage is the place where we
+                                store data.</strong> And in a browser we store data for a website is called
+                            localstorage or
+                            sessionstorage. Mostly localstorage and sessionstorage are similar work for a website but
+                            there is a diffarens in both of them. And the diffrens is sessionstoreage is store data for
+                            only one time as much as we stay on the site . But localstorage is store data for a long
+                            time for a website.
                         </div>
                     </div>
                 </div>
